CHANGELOG
2017.01-174
- Ajout de la proposition de jmgfr pour la suppression massive de messages
- Mise à jour des outils de développement
- Corrections de bugs mineurs

2017.01-173
- Filtrage des pubs sur les prez
- Redesign de la calculatrice

2017.01-172
- Correction de l'ouverture de l'app depuis les widgets (merci @jmgfr)

2017.01-171
- Correction d'un bug a l'ouverture des torrents sur certains mobiles Samsung

2017.01-170
- Nettoyage du changelog
- Mise à jour de la lib JSoup
- Mise à jour de la lib IABv3
- Correction du chemin vers le fichier journal
- Ajout de freescroll au NFO
- Affichage des commentaires des utilisateurs masquant leurs infos
- Snackbar de téléchargement des torrents depuis la prez
- Correction du téléchargement des torrents dont le titre contient des apostrophes
- Activation automatique du proxy lors d'un abonnement
- Corrections de bugs mineurs

2017.01-169
- Correction d'un bug sur le widget
- Ajout d'une solution de fallback en attendant un fix de l'API par l'équipe du site

2016.12-168
- Ajout de notifications en cas d'erreurs API

2016.12-167
- Mise à jour des outils de développement
- Correction de l'ouverture des fichiers sur Android 7
- Retour de la catégorie "Tout"

2016.12-166
- Mise en conformité avec les directives Google concernant la connexion HTTPS
- Correction des problème de "Wrong password" liés à l'encodage des caractères

2016.11-165
- Correction des widgets
- Rétablissement de l'ouverture des liens vers t411.li par l'application
- Le répertoire de téléchargement est maintenant forcé au dossier "Torrents t411" à la racine du stockage externe, pour la compatibilité avec Android 7

2016.11-164
- Correction d'un problème d'ouverture de fichier qui passait pour un PDF

2016.11-163
- Rétablissement des widgets

2016.11-162 BETA
- Changement de domaine
- Correction des connexions API
- Ajustements mineurs

2016.11-161 BETA
- Correction du listing des téléchargements